--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Complie My Code
+name: Compile My Code
 
 on: push
 
@@ -11,4 +11,4 @@ jobs:
     steps:
       # - uses: actions/checkout@v2
       - name: Echo
-        run: echo "Compile Step Would Go Here"
+        run: echo 'Compile Step Would Go Here'
