--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,4 +1,4 @@
-name: Compile My Code
+name: Compile
 
 on: push
 
@@ -9,6 +9,5 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # - uses: actions/checkout@v2
       - name: Echo
         run: echo 'Compile Step Would Go Here'
